--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "testjob",
+  "name": "test-dsol",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -37,5 +37,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
